--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -27,3 +27,6 @@ jobs:
           name: PVZ_Weihua_Installer
           path: Output/*.exe
 
+          git diff-index --quiet HEAD || git commit -m "ci: 自動構建安裝程序"   
+          git push
+
