--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Get Inno Setup Compiler Version
+        run: |
+          iscc.exe /?
+
       - name: Compile Inno Setup script
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.7
         with:
