--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get Inno Setup Compiler Version
+        shell: cmd
         run: |
           "C:\Program Files (x86)\Inno Setup 6\iscc.exe" /?
 
