--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Check Inno Setup version
+        run: iscc /?
+
       - name: Compile Inno Setup script
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.7
         with:
