--- a/.github/workflows/Update iss Version.yml
+++ b/.github/workflows/Update iss Version.yml
@@ -1,78 +1,52 @@
-name: Update PVZ version
+name: Update ISS Version and Deploy
 
 on:
   workflow_dispatch:
     inputs:
-      version:
-        description: 'New version, e.g. 0.4.6.3 （每次手动输入）'
+      version_input:
+        description: '请输入版本号 (将同步更新到 Num 和 Full)'
         required: true
-        default: ''
-
-permissions:
-  contents: write
+        default: '1.0.0'
 
 jobs:
-  update-version:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Validate version input
+      - name: Process ISS File
         run: |
-          if [ -z "${{ github.event.inputs.version }}" ]; then
-            echo "version is required"
-            exit 1
-          fi
-          if ! echo "${{ github.event.inputs.version }}" | grep -Eq '^[0-9]+(\.[0-9]+)*$'; then
-            echo "invalid version format"
-            exit 1
-          fi
+          # 1. 设置变量
+          ORIGINAL_FILE="Setup/PVZ_Weihua.iss"
+          NEW_VERSION="${{ github.event.inputs.version_input }}"
+          
+          # 获取当前时间 (格式: 20260121_1615)
+          TIME_STAMP=$(date +'%Y%m%d_%H%M')
+          
+          # 定义新文件名和路径
+          NEW_FILE_NAME="PVZ_Weihua_${NEW_VERSION}_${TIME_STAMP}.iss"
+          TARGET_DIR="Installation program"
+          TARGET_PATH="${TARGET_DIR}/${NEW_FILE_NAME}"
 
-      - name: Update MyAppVer in PVZ_Weihua.iss and add versioned copy
+          # 确保目标目录存在
+          mkdir -p "$TARGET_DIR"
+
+          # 2. 复制并同时修改两个变量
+          # 使用 sed 匹配变量名并替换引号内的值为 $NEW_VERSION
+          sed -e "s/#define MyAppVerNum \".*\"/#define MyAppVerNum \"$NEW_VERSION\"/" \
+              -e "s/#define MyAppVerFull \".*\"/#define MyAppVerFull \"$NEW_VERSION\"/" \
+              "$ORIGINAL_FILE" > "$TARGET_PATH"
+
+          echo "Success: Generated $TARGET_PATH"
+
+      - name: Commit and Push
         run: |
-          file=Setup/PVZ_Weihua.iss
-          new="${{ github.event.inputs.version }}"
-
-          # sanitize：去掉换行和双引号，防止破坏 sed 表达式或文件名
-          new="$(echo "$new" | tr -d '\r\n"')"
-
-          if [ -z "$new" ]; then
-            echo "version is required"
-            exit 1
-          fi
-
-          if ! echo "$new" | grep -Eq '^[0-9]+(\.[0-9]+)*$'; then
-            echo "invalid version format"
-            exit 1
-          fi
-
-          if [ ! -f "$file" ]; then
-            echo "File $file not found"
-            exit 1
-          fi
-
-          # 更新文件内部版本声明（使用单引号+拼接，避免引号转义问题）
-          sed -E -i.bak 's/^#define MyAppVerNum[[:space:]]+"[^"]+"/#define MyAppVerNum "\"${new}\""/' "$file"
-          sed -E -i.bak 's/^#define MyAppVerFull[[:space:]]+"[^"]+"/#define MyAppVerFull "\"${new}\""/' "$file"
-
-          # 生成时间戳并构成新文件名（保留 .iss）
-          ts="$(date +%Y%m%d_%H%M%S)"
-          newfilename="Setup/PVZ_Weihua_${new}_${ts}.iss"
-
-          # 复制原文件为带版本和时间戳的副本，保留原文件
-          cp "$file" "$newfilename"
-
-          # 删除 sed 产生的 .bak 备份（如不需要保留）
-          rm -f Setup/*.bak
-
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add "$newfilename"
-          git commit -m "chore: bump PVZ version to ${new} and add $(basename "$newfilename")" || echo "No changes to commit"
-
-      - name: Push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push origin HEAD:feature/add-update-version-workflow
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add "Installation program/"
+          git commit -m "Update ISS to version ${{ github.event.inputs.version_input }}"
+          git push
