--- a/.github/workflows/Update iss Version.yml
+++ b/.github/workflows/Update iss Version.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version_input:
-        description: '请输入版本号 (将同步更新到 Num 和 Full)'
+        description: '请输入版本号 Version'
         required: true
         default: '1.0.0'
 
