Update Update iss Version.yml

--- a/.github/workflows/Update iss Version.yml
+++ b/.github/workflows/Update iss Version.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    
+    # 设置全局时区为东八区
+    env:
+      TZ: Asia/Shanghai
 
     steps:
       - name: Checkout code
@@ -20,14 +24,14 @@ jobs:
 
       - name: Process ISS File
         run: |
-          # 1. 设置变量
+          # 1. 变量准备
           ORIGINAL_FILE="Setup/PVZ_Weihua.iss"
           NEW_VERSION="${{ github.event.inputs.version_input }}"
           
-          # 获取当前时间 (格式: 20260121_1615)
+          # 获取东八区当前时间 (格式: 20260121_1645)
           TIME_STAMP=$(date +'%Y%m%d_%H%M')
           
-          # 定义新文件名和路径
+          # 定义新文件名及路径
           NEW_FILE_NAME="PVZ_Weihua_${NEW_VERSION}_${TIME_STAMP}.iss"
           TARGET_DIR="Installation program"
           TARGET_PATH="${TARGET_DIR}/${NEW_FILE_NAME}"
@@ -35,18 +39,19 @@ jobs:
           # 确保目标目录存在
           mkdir -p "$TARGET_DIR"
 
-          # 2. 复制并同时修改两个变量
-          # 使用 sed 匹配变量名并替换引号内的值为 $NEW_VERSION
-          sed -e "s/#define MyAppVerNum \".*\"/#define MyAppVerNum \"$NEW_VERSION\"/" \
-              -e "s/#define MyAppVerFull \".*\"/#define MyAppVerFull \"$NEW_VERSION\"/" \
+          # 2. 修改并另存为新文件
+          # 使用 sed 修改 #define 变量，支持匹配单双引号
+          sed -e "s/\(#define MyAppVerNum \)\".*\"/\1\"$NEW_VERSION\"/" \
+              -e "s/\(#define MyAppVerFull \)\".*\"/\1\"$NEW_VERSION\"/" \
               "$ORIGINAL_FILE" > "$TARGET_PATH"
 
-          echo "Success: Generated $TARGET_PATH"
+          echo "✅ 文件处理完成: $TARGET_PATH"
+          echo "⏰ 当前北京时间: $(date)"
 
       - name: Commit and Push
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add "Installation program/"
-          git commit -m "Update ISS to version ${{ github.event.inputs.version_input }}"
+          git commit -m "Update ISS: v$NEW_VERSION (CST $TIME_STAMP)"
           git push
