--- a/.github/workflows/Update iss Version.yml
+++ b/.github/workflows/Update iss Version.yml
@@ -53,5 +53,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add "Installation program/"
-          git commit -m "git commit -m "Update ISS: version ${{ github.event.inputs.version_input }}"
+          git commit -m "Update ISS to version ${{ github.event.inputs.version_input }}"
           git push
