--- a/.github/workflows/Update iss Version.yml
+++ b/.github/workflows/Update iss Version.yml
@@ -30,7 +30,7 @@ jobs:
           
           # 定义路径
           BACKUP_DIR="Backup/iss"
-          TEMPLATE_DIR="src/iss"
+          TEMPLATE_DIR="Setup/iss"
           
           # 定义文件名
           BACKUP_FILE_NAME="PVZ_Weihua_${NEW_VERSION}_${TIME_STAMP}.iss"
@@ -54,6 +54,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"  
-          git add "Backup/iss/" "src/iss/"
+          git add "Backup/iss/" "Setup/iss/"
           git commit -m "Update ISS: Version ${{ github.event.inputs.version_input }}"
           git push
