--- a/.github/workflows/IPT.yml
+++ b/.github/workflows/IPT.yml
@@ -10,7 +10,7 @@ on:
       add_tools:
         description: '是否添加 tools 文件夹？'
         type: boolean
-        default: true
+        default: false
       before_install_content:
         description: '更新内容 (留空则沿用 src/IPT 中的默认文本)'
         required: false
