--- a/.github/workflows/IPT.yml
+++ b/.github/workflows/IPT.yml
@@ -82,7 +82,7 @@ jobs:
             echo "🚀 正在执行复制操作..."
             mkdir -p "PVZ_Weihua"
             if [ -d "src/Tools" ]; then
-              cp -rv src/Tools/. PVZ_Weihua/
+              cp -rv src/Tools PVZ_Weihua/
               echo "✅ tools 文件夹内容已成功复制到 PVZ_Weihua"
             else
               echo "❌ 错误: 找不到源目录 src/Tools"
