--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,4 +1,4 @@
-name: Update ISS, IPT, Tools and Backup All
+name: Update ISS, IPT and Tools
 
 on:
   workflow_dispatch:
@@ -8,14 +8,14 @@ on:
         required: true
         default: '1.0.0'
       add_tools:
-        description: '是否添加 tools 文件夹到 PVZ_Weihua？'
+        description: '添加 tools 文件夹到 PVZ_Weihua'
         type: boolean
         default: false
       before_install_content:
-        description: '修改【安装前文本】内容'
+        description: '更新内容'
         required: false
       after_install_content:
-        description: '修改【安装后文本】内容'
+        description: '安装后内容'
         required: false
 
 jobs:
@@ -30,17 +30,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Initialize Variables
+      - name: Initialize Environment Variables
         run: |
-          # 使用 GITHUB_ENV 确保全局可用
+          # 锁定核心变量，防止跨步骤失效
           echo "VER=${{ github.event.inputs.version_input }}" >> $GITHUB_ENV
           echo "TIME_STAMP=$(date +'%Y%m%d_%H%M')" >> $GITHUB_ENV
-          echo "LOG_TIME=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
           echo "ADD_TOOLS=${{ github.event.inputs.add_tools }}" >> $GITHUB_ENV
 
       - name: Process Tools and IPT Files
         run: |
-          # 1. 处理 Tools
+          # 1. 处理 Tools 文件夹
           if [ "$ADD_TOOLS" = "true" ]; then
             mkdir -p "PVZ_Weihua"
             [ -d "src/tools" ] && cp -rv src/tools/. PVZ_Weihua/
@@ -49,7 +48,7 @@ jobs:
           # 2. 处理 IPT 及其备份 (LBF & LAF)
           mkdir -p "Setup/ipt" "Backup/IPT"
           
-          # 处理安装前
+          # 处理安装前文本
           if [ -n "${{ github.event.inputs.before_install_content }}" ]; then
             echo "${{ github.event.inputs.before_install_content }}" > "Setup/ipt/IPF-${VER}.txt"
             cp "Setup/ipt/IPF-${VER}.txt" "Backup/IPT/LBF_${VER}_${TIME_STAMP}.txt"
@@ -58,7 +57,7 @@ jobs:
             cp "src/IPT/IBF.txt" "Backup/IPT/LBF_${VER}_${TIME_STAMP}.txt"
           fi
 
-          # 处理安装后
+          # 处理安装后文本
           if [ -n "${{ github.event.inputs.after_install_content }}" ]; then
             echo "${{ github.event.inputs.after_install_content }}" > "Setup/ipt/IAF-${VER}.txt"
             cp "Setup/ipt/IAF-${VER}.txt" "Backup/IPT/LAF_${VER}_${TIME_STAMP}.txt"
@@ -70,53 +69,24 @@ jobs:
       - name: Modify Original ISS File
         run: |
           ISS_FILE="Setup/PVZ_Weihua.iss"
+          
+          # 直接原地修改原文件
           sed -i "s/#define MyAppVerNum \".*\"/#define MyAppVerNum \"$VER\"/" "$ISS_FILE"
           sed -i "s/#define MyAppVerFull \".*\"/#define MyAppVerFull \"$VER\"/" "$ISS_FILE"
           sed -i "s|SetupIconFile=.*|SetupIconFile=Setup\\\\ICO\\\\weihua ${VER}.ico|" "$ISS_FILE"
           
+          # 同步分发备份和模板
           mkdir -p "Backup/iss" "ConfigurationTemplate/iss"
           cp "$ISS_FILE" "Backup/iss/PVZ_Weihua_${VER}_${TIME_STAMP}.iss"
           cp "$ISS_FILE" "ConfigurationTemplate/iss/PVZ_Weihua.iss"
-
-      - name: Generate Build Log (Python Way)
-        shell: python
-        run: |
-          import os
-          
-          ver = os.environ['VER']
-          ts = os.environ['TIME_STAMP']
-          lt = os.environ['LOG_TIME']
-          tools = "Added / 已添加" if os.environ['ADD_TOOLS'] == "true" else "Skipped / 已跳过"
-          actor = "${{ github.actor }}"
-          
-          log_content = f"""==================================================
-           PVZ_Weihua Update Log / 更新日志
-==================================================
-Build Time / 编译时间: {lt} (CST)
-Version / 版本号: {ver}
---------------------------------------------------
-[Tasks / 任务详情]
-- ISS File Updated / ISS文件已更新: Setup/PVZ_Weihua.iss
-- IPT Backup / IPT备份: Backup/IPT/ (LBF & LAF)
-- Icon Path / 图标路径: Setup/ICO/weihua {ver}.ico
-- Tools Folder / 工具文件夹: {tools}
-- Installation Text / 安装文本: Updated (IPF-{ver}.txt, IAF-{ver}.txt)
-
-[System Info / 系统信息]
-- Triggered by / 触发者: {actor}
-==================================================
-"""
-          log_dir = "Setup/Log"
-          os.makedirs(log_dir, exist_ok=True)
-          log_path = os.path.join(log_dir, f"{ver}_{ts}.log")
-          
-          with open(log_path, "w", encoding="utf-8") as f:
-              f.write(log_content)
-          print(f"✅ Log generated at {log_path}")
 
       - name: Commit and Push
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+          
+          # 提交所有变动
           git add .
-          git diff --staged --quiet || (git commit -m "Update v$VER at $LOG_TIME" && git push)
+          
+          # 只有在有变动时才提交，防止 Action 报错
+          git diff --staged --quiet || (git commit -m "Update v$VER (Manual Trigger)" && git push)
