--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -39,12 +39,20 @@ jobs:
 
       - name: Process Tools and IPT Files
         run: |
-          # 1. 处理 Tools 文件夹
+          # --- 2. 处理 Tools 文件夹复制 ---
           if [ "$ADD_TOOLS" = "true" ]; then
+            echo "🚀 正在执行复制操作..."
             mkdir -p "PVZ_Weihua"
-            [ -d "src/Tools" ] && cp -rv src/Tools PVZ_Weihua/
+            if [ -d "src/Tools" ]; then
+              cp -rv src/Tools PVZ_Weihua/
+              echo "✅ tools 文件夹内容已成功复制到 PVZ_Weihua"
+            else
+              echo "❌ 错误: 找不到源目录 src/Tools"
+              exit 1
+            fi
+          else
+            echo "ℹ️ 用户选择 [否] 或未勾选，不执行复制。"
           fi
-
           # 2. 处理 IPT 及其备份 (LBF & LAF)
           mkdir -p "Setup/ipt" "Backup/IPT"
           
