--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,21 +1,21 @@
-name: Update ISS, IPT and Tools
+name: Update ISS, IPT and Tools (Fixed Copy & Push)
 
 on:
   workflow_dispatch:
     inputs:
       version_input:
-        description: '请输入版本号 (如 1.2.0)'
+        description: '請輸入版本號 (如 1.2.0)'
         required: true
         default: '1.0.0'
       add_tools:
-        description: '添加 tools 文件夹到 PVZ_Weihua'
+        description: '是否添加 tools 文件夹到 PVZ_Weihua？'
         type: boolean
         default: false
       before_install_content:
-        description: '更新内容'
+        description: '修改【安裝前文本】內容'
         required: false
       after_install_content:
-        description: '安装后内容'
+        description: '修改【安裝後文本】內容'
         required: false
 
 jobs:
@@ -29,72 +29,87 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Initialize Environment Variables
+      - name: Initialize Env
         run: |
-          # 锁定核心变量，防止跨步骤失效
           echo "VER=${{ github.event.inputs.version_input }}" >> $GITHUB_ENV
           echo "TIME_STAMP=$(date +'%Y%m%d_%H%M')" >> $GITHUB_ENV
-          echo "ADD_TOOLS=${{ github.event.inputs.add_tools }}" >> $GITHUB_ENV
+          echo "HAS_TOOLS=${{ github.event.inputs.add_tools }}" >> $GITHUB_ENV
 
-      - name: Process Tools and IPT Files
+      - name: Execute Copy and Modify Logic
         run: |
-          # --- 2. 处理 Tools 文件夹复制 ---
-          if [ "$ADD_TOOLS" = "true" ]; then
-            echo "🚀 正在执行复制操作..."
-            mkdir -p "PVZ_Weihua"
-            if [ -d "src/Tools" ]; then
-              cp -rv src/Tools PVZ_Weihua/
-              echo "✅ tools 文件夹内容已成功复制到 PVZ_Weihua"
+          # 1. 建立所有必要目錄
+          mkdir -p "PVZ_Weihua"
+          mkdir -p "Setup/ipt"
+          mkdir -p "Backup/IPT"
+          mkdir -p "Backup/iss"
+          mkdir -p "ConfigurationTemplate/iss"
+
+          # 2. 處理 Tools (強制複製)
+          if [ "$HAS_TOOLS" = "true" ]; then
+            if [ -d "src/tools" ]; then
+              cp -af src/tools/. PVZ_Weihua/
+              echo "✅ Tools copied to PVZ_Weihua"
             else
-              echo "❌ 错误: 找不到源目录 src/Tools"
-              exit 1
+              echo "⚠️ src/tools not found"
             fi
-          else
-            echo "ℹ️ 用户选择 [否] 或未勾选，不执行复制。"
           fi
-          # 2. 处理 IPT 及其备份 (LBF & LAF)
-          mkdir -p "Setup/ipt" "Backup/IPT"
-          
-          # 处理安装前文本
+
+          # 3. 處理 IPT 文本與備份
+          # 安裝前
           if [ -n "${{ github.event.inputs.before_install_content }}" ]; then
             echo "${{ github.event.inputs.before_install_content }}" > "Setup/ipt/IPF-${VER}.txt"
-            cp "Setup/ipt/IPF-${VER}.txt" "Backup/IPT/LBF_${VER}_${TIME_STAMP}.txt"
           else
-            cp "src/IPT/IBF.txt" "Setup/ipt/IPF-${VER}.txt"
-            cp "src/IPT/IBF.txt" "Backup/IPT/LBF_${VER}_${TIME_STAMP}.txt"
+            cp -f "src/IPT/IBF.txt" "Setup/ipt/IPF-${VER}.txt" || touch "Setup/ipt/IPF-${VER}.txt"
           fi
+          cp -f "Setup/ipt/IPF-${VER}.txt" "Backup/IPT/LBF_${VER}_${TIME_STAMP}.txt"
 
-          # 处理安装后文本
+          # 安裝後
           if [ -n "${{ github.event.inputs.after_install_content }}" ]; then
             echo "${{ github.event.inputs.after_install_content }}" > "Setup/ipt/IAF-${VER}.txt"
-            cp "Setup/ipt/IAF-${VER}.txt" "Backup/IPT/LAF_${VER}_${TIME_STAMP}.txt"
           else
-            cp "src/IPT/IAF.txt" "Setup/ipt/IAF-${VER}.txt"
-            cp "src/IPT/IAF.txt" "Backup/IPT/LAF_${VER}_${TIME_STAMP}.txt"
+            cp -f "src/IPT/IAF.txt" "Setup/ipt/IAF-${VER}.txt" || touch "Setup/ipt/IAF-${VER}.txt"
+          fi
+          cp -f "Setup/ipt/IAF-${VER}.txt" "Backup/IPT/LAF_${VER}_${TIME_STAMP}.txt"
+
+          # 4. 修改 ISS 原文件
+          ISS_FILE="Setup/PVZ_Weihua.iss"
+          if [ -f "$ISS_FILE" ]; then
+            # 根據你上傳的內容準確匹配行 
+            sed -i "s/#define MyAppVerNum \".*\"/#define MyAppVerNum \"$VER\"/" "$ISS_FILE"
+            sed -i "s/#define MyAppVerFull \".*\"/#define MyAppVerFull \"$VER\"/" "$ISS_FILE"
+            # 修改圖標路徑
+            sed -i "s|SetupIconFile=.*|SetupIconFile=Setup\\\\ICO\\\\weihua ${VER}.ico|" "$ISS_FILE"
+            
+            # 同步到備份位元置
+            cp -f "$ISS_FILE" "Backup/iss/PVZ_Weihua_${VER}_${TIME_STAMP}.iss"
+            cp -f "$ISS_FILE" "ConfigurationTemplate/iss/PVZ_Weihua.iss"
+            echo "✅ ISS file updated and backed up"
+          else
+            echo "❌ Error: $ISS_FILE not found"
+            exit 1
           fi
 
-      - name: Modify Original ISS File
-        run: |
-          ISS_FILE="Setup/PVZ_Weihua.iss"
-          
-          # 修改原文件
-          sed -i "s/#define MyAppVerNum \".*\"/#define MyAppVerNum \"$VER\"/" "$ISS_FILE"
-          sed -i "s/#define MyAppVerFull \".*\"/#define MyAppVerFull \"$VER\"/" "$ISS_FILE"
-          sed -i "s|SetupIconFile=.*|SetupIconFile=Setup\\\\ICO\\\\weihua ${VER}.ico|" "$ISS_FILE"
-          
-          # 同步分发备份和模板
-          mkdir -p "Backup/iss" "ConfigurationTemplate/iss"
-          cp "$ISS_FILE" "Backup/iss/PVZ_Weihua_${VER}_${TIME_STAMP}.iss"
-          cp "$ISS_FILE" "ConfigurationTemplate/iss/PVZ_Weihua.iss"
-
-      - name: Commit and Push
+      - name: Force Commit and Push
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           
-          # 提交所有变动
-          git add .
-          
-          # 只有在有变动时才提交，防止 Action 报错
-          git diff --staged --quiet || (git commit -m "Update v$VER (Manual Trigger)" && git push)
+          # 顯式添加所有受影響的文件夾，避免被 .gitignore 忽略
+          git add -f Setup/PVZ_Weihua.iss
+          git add -f Setup/ipt/
+          git add -f Backup/IPT/
+          git add -f Backup/iss/
+          git add -f ConfigurationTemplate/iss/
+          git add -f PVZ_Weihua/
+
+          # 檢查是否有任何變更
+          if git diff --staged --quiet; then
+            echo "沒有檢測到任何文件變更，跳過提交。"
+          else
+            git commit -m "Update v${VER} - Auto Sync Assets"
+            git push origin HEAD
+            echo "🚀 文件已成功推送至倉庫"
+          fi
